<resources>
    <string name="app_name">CHORE.fy</string>

    <!--Features Page-->
    <string name="features_page_title">FEATURES</string>

    <!--Main Page-->
    <string name="add_task_string">Add Task</string>

    <!--Settings Page-->
    <string name="settings_page_title">SETTINGS</string>
    <string name="night_mode_string">Night Mode</string>
    <string name="notifications_title">Notifications</string>
    <string name="on_notifications_string">Turn On Notifications</string>
    <string name="pop_up_string">Pop-up</string>
    <string name="sound_string">Sound</string>
    <string name="vibrate_string">Vibrate</string>
    <string name="about_title">About</string>
    <string name="developers_title">Developers:</string>

    <!--Task Assigner Page-->
    <string name="task_assigner_title">TASK ASSIGNER</string>
    <string name="task_name_string">Task Name:</string>
    <string name="task_name_hint_string">e.g. Wash Dishes</string>
    <string name="set_date_string">Set Date</string>
    <string name="set_date_hint_string">---, --- --, ----</string>
    <string name="set_time_string">Set Time</string>
    <string name="set_time_hint_string">-:-  --</string>
    <string name="assign_member_string">Assign Member:</string>
    <string name="assign_member_hint_string">e.g. Jason</string>

    <string name="preview_string">Preview</string>
    <string name="date_preview_string">eee, mmm dd, yyyy</string>
    <string name="time_preview_string">    |    hh:mm a</string>
    <string name="task_name_preview_string">TASK NAME</string>
    <string name="member_name_preview_string">Member Name</string>

    <!--Home Task Card-->
    <string name="due_string">Due:</string>
    <string name="assigned_to_string">Assigned To:</string>

    <string name="cancel_string">Cancel</string>
    <string name="features">FEATURES</string>
    <string name="grocery_list_page">GROCERY LIST</string>

    <!--Navigation-->
    <string name="home_text">CHORE.fy</string>
    <string name="feature_text">Feature</string>
    <string name="settings_text">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>