<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:background="@color/default_bGrd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:text="@string/settings_page_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/dark_teal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_night_mode"
                android:contentDescription="@null"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:src="@drawable/night_mode_icon"
                app:tint="@color/dark_gray" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_night_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:text="@string/night_mode_string"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="0dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/text_view_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/notifications_title"
            android:textColor="@color/dark_teal"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_notifications"
                android:contentDescription="@null"
                android:layout_width="40dp"
                android:layout_height="55dp"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="12dp"
                app:srcCompat="@drawable/notifications_icon"
                app:tint="@color/dark_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/on_notifications_string"
                    android:textColor="@color/dark_gray"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_pop_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/pop_up_string"
                    android:textColor="@color/dark_gray"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/sound_string"
                    android:textColor="@color/dark_gray"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/vibrate_string"
                    android:textColor="@color/dark_gray"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/text_view_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/about_title"
            android:textColor="@color/dark_teal"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_home_work_24"
                android:contentDescription="@null"
                app:tint="@color/light_gray" />

            <TextView
                android:id="@+id/text_view_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/app_name"
                android:textColor="@color/light_teal"
                android:textSize="30sp"
                android:textStyle="bold"/>

        </LinearLayout>


        <TextView
            android:id="@+id/text_view_developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/developers_title"
            android:textColor="@color/dark_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_view_developer_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Michael Ken Revil\nJericho Carl Tismo\nJohn Rexpearl Tumlos"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>