<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TaskAssigner"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">

    <!--Navigation Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBtnReturn"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:contentDescription="@null"
            android:padding="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/return_icon"
            android:tint="@color/dark_teal"/>

        <ImageButton
            android:id="@+id/imgBtnSave"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1.5"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/dark_teal"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:contentDescription="@null"
            app:srcCompat="@drawable/check_icon"
            android:tint="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_divider_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:text="@string/task_assigner_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@color/dark_teal" />

        <!--Task Name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/text_field_bg">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                app:srcCompat="@drawable/task_icon"
                app:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/task_name_string"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/white"
                android:hint="@string/task_name_hint_string"
                android:textColorHint="@color/light_gray"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </LinearLayout>

        <!--Set Date and Time-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <!--Set Date-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSetDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_border_edges"
                    android:text="@string/set_date_string"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTxtSetDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:backgroundTint="@color/dark_gray"
                    android:hint="@string/set_date_hint_string"
                    android:textColorHint="@color/light_gray"
                    android:textColor="@color/dark_gray"
                    android:textSize="20sp"
                    android:enabled="false"/>

            </LinearLayout>

            <!--Set Time-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSetTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/button_border_edges"
                    android:text="@string/set_time_string"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/editTxtSetTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_horizontal"
                    android:backgroundTint="@color/dark_gray"
                    android:hint="@string/set_time_hint_string"
                    android:textColorHint="@color/light_gray"
                    android:textColor="@color/dark_gray"
                    android:textSize="20sp"
                    android:enabled="false"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/text_field_bg">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/person_icon"
                app:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/assign_member_string"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/white"
                android:hint="@string/assign_member_hint_string"
                android:textColorHint="@color/light_gray"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/preview_string"
            android:textColor="@color/dark_gray"
            android:textStyle="italic|bold"
            android:textSize="18sp"
            android:gravity="center"/>

    <!--Preview-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="45dp"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/dark_teal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:enabled="false"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/due_string"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:layout_marginEnd="10dp" />

                        <TextView
                            android:id="@+id/text_view_date_preview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_preview_string"
                            android:textSize="14sp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/text_view_time_preview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="    |    hh:mm a"
                            android:textSize="14sp"
                            android:textColor="@color/white"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/text_view_task_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_name_preview_string"
                        android:textStyle="bold|italic"
                        android:textSize="22sp"
                        android:textColor="@color/white"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/assigned_to_string"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:layout_marginEnd="10dp" />

                        <TextView
                            android:id="@+id/text_view_member_preview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/member_name_preview_string"
                            android:textSize="14sp"
                            android:textColor="@color/white"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>

