<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".activity_task_assigner_page">

    <!--Navigation Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1.5"
            android:background="@drawable/button_border"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:text="@string/cancel_string"
            android:textColor="@color/dark_teal"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="2.5"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/dark_teal"
            android:contentDescription="@null"
            android:text="@string/add_task_string"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <!--Page Action Bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:text="@string/task_assigner_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@color/dark_teal" />

    </LinearLayout>

</RelativeLayout>